fixed description alignment

--- a/index.css
+++ b/index.css
@@ -1,91 +1,93 @@
-html, body {
-    height: 100vh;
-    width: 100vw;
+html,
+body {
+  height: 100vh;
+  width: 100vw;
 }
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    font-family: 'Comfortaa', cursive;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  font-family: "Comfortaa", cursive;
+  margin: 0;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    max-width: min(100vw, 80rem);
-    /* Hint */
+  display: flex;
+  flex-direction: column;
+  max-width: min(100vw, 80rem);
+  /* Hint */
 }
 .container > * {
-    margin: 0.5rem;
+  margin: 0.5rem;
 }
 .heading {
-    font-size: 5rem;
-    margin: 1.5rem;
-    font-weight: 500;
+  font-size: 5rem;
+  margin: 1.5rem;
+  font-weight: 500;
 }
-@media screen and (max-width:540px) {
-    .heading {
-        font-size: 2.5rem;
-    }
+@media screen and (max-width: 540px) {
+  .heading {
+    font-size: 2.5rem;
+  }
 }
 .description {
-    font-style: oblique;
+  font-style: oblique;
+  text-align: center;
 }
 .search_wrapper {
-    border: 0.125rem solid rgb(23, 23, 23);
-    height: 3rem;
-    padding: 0.25rem 0.75rem;
-    box-sizing: border-box;
-    border-radius: 0.5rem;
-    display: flex;
-    align-items: center;
+  border: 0.125rem solid rgb(23, 23, 23);
+  height: 3rem;
+  padding: 0.25rem 0.75rem;
+  box-sizing: border-box;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
 }
-.search_label{
-    transition: linear 0.25s;
-    transform: none;
-    position: absolute;
-    font-size: 1.25rem;
-    transform-origin: left;
-    background-color: white;
-    padding: 0 0.5rem;
-    z-index: -1;
-    margin-left: 1.5rem;
+.search_label {
+  transition: linear 0.25s;
+  transform: none;
+  position: absolute;
+  font-size: 1.25rem;
+  transform-origin: left;
+  background-color: white;
+  padding: 0 0.5rem;
+  z-index: -1;
+  margin-left: 1.5rem;
 }
 .search_wrapper:focus-within {
-    border-color: #303F9F;
+  border-color: #303f9f;
 }
 .search_wrapper:focus-within > .search_label,
 .search_input:valid + .search_label {
-    transform: translateY(-1.5rem) scale(0.75);
-    transition: linear 0.25s;
-    z-index: 1;
-    color: #303F9F;
+  transform: translateY(-1.5rem) scale(0.75);
+  transition: linear 0.25s;
+  z-index: 1;
+  color: #303f9f;
 }
 .search_input,
 .search_input:focus-visible {
-    background-color: transparent;
-    flex-grow: 1;
-    border: none;
-    font-family: 'Comfortaa', cursive;
-    font-size: 1.5rem;
-    padding: 0 0.5rem;
-    outline: none;
-    max-width: calc(100% - 2rem);
+  background-color: transparent;
+  flex-grow: 1;
+  border: none;
+  font-family: "Comfortaa", cursive;
+  font-size: 1.5rem;
+  padding: 0 0.5rem;
+  outline: none;
+  max-width: calc(100% - 2rem);
 }
 .search_button {
-    width: max-content;
-    display: flex;
-    align-items: center;
-    align-self: flex-end;
-    color: white;
-    background-color: #3F51B5;
-    border-radius: 0.25rem;
-    border: none;
-    padding: 0.5rem 0.75rem;
+  width: max-content;
+  display: flex;
+  align-items: center;
+  align-self: flex-end;
+  color: white;
+  background-color: #3f51b5;
+  border-radius: 0.25rem;
+  border: none;
+  padding: 0.5rem 0.75rem;
 }
 .search_icon {
-    width: 1.5rem;
-    height: 1.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
